Bug 390677 - Instable vertical position of alternate combined fragment widget
Summary: Instable vertical position of alternate combined fragment widget
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-18 11:38 UTC by Ralf Habacker
Modified: 2018-02-18 11:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.3 (KDE Applications 17.12.2)
Sentry Crash Report:


Attachments
xmi test file (9.95 KB, application/x-uml)
2018-02-18 11:38 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-18 11:38:07 UTC
Created attachment 110777 [details]
xmi test file

How to reproduce:
1. start umbrello
2. load appended test file
3. try to move horizontal line up

What happens ?
The vertical line moves down be itself

What is expected ?
The vertical line should not change its vertical position after a move
Comment 1 Ralf Habacker 2018-02-18 11:47:40 UTC
Git commit 62e20759adbe24d41a3df1bb8b9654655debd0ea by Ralf Habacker.
Committed on 18/02/2018 at 11:45.
Pushed by habacker into branch 'Applications/17.12'.

Fix 'Instable vertical position of alternate combined fragment widget'

The reason for this bug was that some of the variables used for
calculating the vertical position are of type int, which cuts the
fragment value of the vertical position.
FIXED-IN:2.24.3 (KDE Applications 17.12.2)

M  +1    -1    umbrello/umlwidgets/combinedfragmentwidget.cpp
M  +2    -2    umbrello/umlwidgets/floatingdashlinewidget.h

https://commits.kde.org/umbrello/62e20759adbe24d41a3df1bb8b9654655debd0ea