Fix 'Instable vertical position of alternate combined fragment widget'

The reason for this bug was that some of the variables used for
calculating the vertical position are of type int, which cuts the
fragment value of the vertical position.

BUG:390677
FIXED-IN:2.24.3 (KDE Applications 17.12.2)